// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gitt at det skal ikke vises en valideringsfeil Når ErrorWrapper rendres Så vises ikke valideringsfeil 1`] = `
<div>
  <div
    class="error-wrapper"
    data-testid="error-wrapper-testid"
  />
</div>
`;

exports[`Gitt at det skal vises en valideringsfeil Når ErrorWrapper rendres Så vises Valideringsfeilen 1`] = `
<div>
  <div
    class="error-wrapper error-wrapper--with-error"
    data-testid="error-wrapper-testid"
  >
    <p
      class="error-wrapper__errors"
      role="alert"
    >
      Dette er en feil
    </p>
  </div>
</div>
`;
